ApexWorkbook/src/objects/Festival__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date for Festival</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Admission_Tickets_Sold__c</fullName>
        <label>General Admission Tickets Sold</label>
        <summarizedField>Attendee__c.Tickets_Purchased__c</summarizedField>
        <summaryFilterItems>
            <field>Attendee__c.Ticket_Type__c</field>
            <operation>equals</operation>
            <value>General Admission</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.Festival__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date for Festival</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Tickets_Sold__c</fullName>
        <formula>VIP_Tickets_Sold__c  +  General_Admission_Tickets_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tickets Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_Tickets_Sold__c</fullName>
        <label>VIP Tickets Sold</label>
        <summarizedField>Attendee__c.Tickets_Purchased__c</summarizedField>
        <summaryFilterItems>
            <field>Attendee__c.Ticket_Type__c</field>
            <operation>equals</operation>
            <value>VIP</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.Festival__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Festival</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Festival Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Festivals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>